--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -8,9 +8,7 @@
 </head>
 <body>
     
-    <h1>Inventory</h1>
-    <img src="/boss yvan.jpg">
-    <a href="/">Back</a>
+    <%- include('navbar') %> 
 
     <table>
         <thead>
@@ -40,6 +38,8 @@
             <% }) %>
         </tbody>
     </table>
+
+    <img src="/boss yvan.jpg">
 
 </body>
 </html>
