--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../submenu.css">
     <title>Add Product</title>
 </head>
 <body>
-
-    <h1>Add Product</h1>
-    <img src="/boss tristan.jpg">
-    <a href="/products">Back</a>
     
+    <img src="/boss tristan.jpg">
+
     <form action="/products/add" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br>
@@ -29,7 +27,15 @@
         <input type="number" id="quantity" name="quantity" step="any" required><br>
 
         <button type="submit">Add Product</button>
+        <button type="button" onclick="goBack()">Cancel</button>
+
     </form>
+
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 
 </body>
 </html>
