--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/submenu.css">
     <title>Edit Product</title>
 </head>
 <body>
     <h1>Edit Product</h1>
     <img src="/boss tristan.jpg">
-    <a href="/products">Back</a>
 
     <form action="/products/<%= product.product_id %>/edit" method="POST">
         <label for="name">Name:</label>
@@ -23,6 +22,8 @@
         <label for="quantity">Quantity:</label>
         <input type="number" id="quantity" name="quantity" value="<%= product.quantity %>" step="any" required><br>
         <button type="submit">Save Changes</button>
+        <button type="cancel">Cancel</button>
+
     </form>
 </body>
 </html>
