--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="submenu.css">
     <title>POS System</title>
 </head>
 <body>
     
+    <%- include('navbar') %> 
+    
     <h1>Ong n Prends</h1>
     <h2>POS System</h2>
-    <a href=" /products">Products</a>
-    <a href=" /inventory">Inventory</a>
-    <a href=" /sales">Sales</a>
-
 
     <img src="/boss Malcolm.jpg">
 
