--- a/views/addSale.ejs
+++ b/views/addSale.ejs
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="../style.css">
     <title>Record Sale</title>
 </head>
-
 <body>
     <%- include('navbar') %> 
 
@@ -36,6 +35,7 @@
             <!-- Receipt items will be dynamically added here -->
         </ul>
         <p id="totalCost">Total Cost: Php 0.00</p>
+        <button type="button" onclick="recordSale()">Record Sale</button>
     </div>
 
     <script>
@@ -81,6 +81,10 @@
             });
 
             document.getElementById('totalCost').textContent = `Total Cost: Php ${totalCost.toFixed(2)}`;
+        }
+
+        function recordSale() {
+            // Implement the logic to record the sale here
         }
 
         function goBack() {
