--- a/views/sales.ejs
+++ b/views/sales.ejs
@@ -9,22 +9,28 @@
 <body>
     
     <%- include('navbar') %> 
+    <h1>Profit for the day: Php <%= totalProfit %></h1>
     
     <table>
         <thead>
             <tr>
                 <th>Sale Date</th>
-                <th>Products</th>
+                <th>Product</th>
+                <th>Price</th>
                 <th>Quantity Sold</th>
+                <th>Total</th>
                 <th>Actions</th> 
             </tr>
         </thead>
         <tbody>
             <% sales.forEach(sale => { %>
+                <% const product = products.find(product => product.product_id === sale.product_id); %>
                 <tr>
                     <td><%= new Date(sale.sale_date).toLocaleDateString('en-US', { month: 'short', day: 'numeric', year: 'numeric' }) %></td>
                     <td><%= sale.product_name %></td>
+                    <td>Php <%= product.price %></td>
                     <td><%= sale.quantity_sold %></td>
+                    <td>Php <%= sale.total_profit %></td>
                     <td>
                         <form action="/sales/<%= sale.sale_id %>/edit" method="GET">
                             <button type="submit">Edit</button>
@@ -34,6 +40,8 @@
                             <button type="submit">Delete</button>
                         </form>
                     </td>
+                </tr>
+                <tr>
                 </tr>
             <% }) %>
         </tbody>
