--- a/views/addSale.ejs
+++ b/views/addSale.ejs
@@ -35,7 +35,7 @@
             <!-- Receipt items will be dynamically added here -->
         </ul>
         <p id="totalCost">Total Cost: Php 0.00</p>
-        <button type="button" onclick="recordSale()">Record Sale</button>
+        <!--button type="button" onclick="recordSale()">Record Sale</button-->
     </div>
 
     <script>
